--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "css-loader": "^0.23.1",
     "foundation-sites": "^6.2.4",
     "jquery": "^2.2.4",
+    "node-sass": "^3.13.0",
+    "sass-loader": "^4.0.2",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.13"
